--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,5 @@
 <!-- <app-education></app-education> -->
 <!-- <app-profile></app-profile> -->
 <router-outlet></router-outlet>
+<!-- <app-template></app-template> -->
+<!-- <app-selected-template></app-selected-template> -->
