--- a/src/app/resume/education/education.component.html
+++ b/src/app/resume/education/education.component.html
@@ -33,6 +33,10 @@
             <label for="board">Board</label>
             <input type="text" formControlName="board" class="form-control" placeholder="Enter Board">
           </div>
+          <div class="m-2 flex-fill">
+            <label for="location">Location</label>
+            <input type="text" formControlName="location" class="form-control" placeholder="Enter location">
+          </div>
         </div>
       </div>
     </div>
