--- a/src/app/candidate-authentication/register/register.component.html
+++ b/src/app/candidate-authentication/register/register.component.html
@@ -5,7 +5,7 @@
               <div class="content">
                   <h3>New To Our Protal!!</h3>
                   <p><strong>Register now to connect with top companies and find your dream job.</strong></p>
-                  <button class="btn" id="sign-up-btn">Sign In</button>
+                  <button class="btn" id="sign-up-btn" [routerLink]="['']">Sign In</button>
               </div>
               <img src="../../../assets/img/imaging2.svg" alt="" class="image">
           </div>
