--- a/src/app/resume/profile/profile.component.html
+++ b/src/app/resume/profile/profile.component.html
@@ -47,7 +47,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <label for="aboutMe" class="form-label">Last Name</label>
+        <label for="aboutMe" class="form-label">About Me</label>
         <input type="text" formControlName="aboutMe" id="aboutMe" class="form-control" placeholder="About me">
       </div>
       <div class="col-md-6">
