--- a/src/app/resume/template/template.component.html
+++ b/src/app/resume/template/template.component.html
@@ -14,7 +14,7 @@
             egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend
             leo.
           </p>
-          <button>More Info</button>
+          <button (click)="selectedTemplate(i)">Choose Template</button>
         </figcaption>
       </figure>
     </div>
