--- a/src/app/candidate-authentication/login/login.component.html
+++ b/src/app/candidate-authentication/login/login.component.html
@@ -21,7 +21,7 @@
             <div class="content">
                 <h3>Welcome back! </h3>
                 <p>Log in to explore new job opportunities and career advancements.</p>
-                <button class="btn" id="register-btn">Register</button>
+                <button class="btn" id="register-btn" (click)="onRegister()">Register</button>
             </div>
             <img src="../../../assets/img/imaging1.svg" alt="" class="image">
         </div>
