--- a/src/app/candidate-portal/hero/hero.component.html
+++ b/src/app/candidate-portal/hero/hero.component.html
@@ -15,7 +15,7 @@
       href="index.html"
       class="navbar-brand d-flex align-items-center text-center py-0 px-4 px-lg-5"
     >
-      <h1 class="m-0 text-primary">JobEntry</h1>
+      <h1 class="m-0 text-primary">JobGrove</h1>
     </a>
     <button
       type="button"
@@ -87,9 +87,9 @@
         >
       </div>
       <a
-        href=""
+        [routerLink]="['']"
         class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block"
-        >Post A Job<i class="fa fa-arrow-right ms-3"></i
+        >Logout<i class="fa fa-arrow-right ms-3"></i
       ></a>
     </div>
   </nav>
@@ -182,17 +182,13 @@
               <div class="col-md-4">
                 <select class="form-select border-0">
                   <option selected>Category</option>
-                  <option value="1">Category 1</option>
-                  <option value="2">Category 2</option>
-                  <option value="3">Category 3</option>
+                  <option *ngFor="let cat of category">{{cat.name}}</option>
                 </select>
               </div>
               <div class="col-md-4">
                 <select class="form-select border-0">
                   <option selected>Location</option>
-                  <option value="1">Location 1</option>
-                  <option value="2">Location 2</option>
-                  <option value="3">Location 3</option>
+                  <option *ngFor="let loc of location">{{loc.loc_name}}</option>
                 </select>
               </div>
             </div>
@@ -373,28 +369,27 @@
           </ul>
           <div class="tab-content">
             <div id="tab-1" class="tab-pane fade show p-0 active">
-              <div class="job-item p-4 mb-4">
+              <div class="job-item p-4 mb-4" *ngFor="let job of JobData">
                 <div class="row g-4">
                   <div class="col-sm-12 col-md-8 d-flex align-items-center">
                     <img
                       class="flex-shrink-0 img-fluid border rounded"
-                      src="../../../assets/img/com-logo-1.jpg"
+                      src="{{job.logo_url}}"
                       alt=""
                       style="width: 80px; height: 80px"
                     />
                     <div class="text-start ps-4">
-                      <h5 class="mb-3">Software Engineer</h5>
+                      <h5 class="mb-3">{{job.job_title}}</h5>
                       <span class="text-truncate me-3"
                         ><i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >New York, USA</span
+                        >{{job.job_loc}}</span
                       >
                       <span class="text-truncate me-3"
-                        ><i class="far fa-clock text-primary me-2"></i>Full
-                        Time</span
+                        ><i class="far fa-clock text-primary me-2"></i>{{job.job_type}}</span
                       >
                       <span class="text-truncate me-0"
                         ><i class="far fa-money-bill-alt text-primary me-2"></i
-                        >$123 - $456</span
+                        >{{job.salary}}</span
                       >
                     </div>
                   </div>
@@ -405,11 +400,11 @@
                       <a class="btn btn-light btn-square me-3" href=""
                         ><i class="far fa-heart text-primary"></i
                       ></a>
-                      <a class="btn btn-primary" href="">Apply Now</a>
+                      <a class="btn btn-primary" (click)="applyJob(job.job_id)">Apply Now</a>
                     </div>
                     <small class="text-truncate"
                       ><i class="far fa-calendar-alt text-primary me-2"></i>Date
-                      Line: 01 Jan, 2045</small
+                      Line: {{job.application_deadline | date}}</small
                     >
                   </div>
                 </div>
