--- a/src/app/resume/selected-template/selected-template.component.css
+++ b/src/app/resume/selected-template/selected-template.component.css
@@ -1,275 +1,446 @@
-* {
-	 box-sizing: border-box;
-	 transition: 0.35s ease;
-}
- .rela-block {
-	 display: block;
-	 position: relative;
-	 margin: auto;
-	 /* top: 0px;
-	 left: 10px;
-	 right: 400px;
-	 bottom: 400px; */
-   /* width: 2000px; */
-}
- .rela-inline {
-	 display: inline-block;
-	 position: relative;
-	 margin: auto;
-	 top: 500px;
-	 left: 100px;
-	 right: 100px;
-	 bottom: 100px;
-}
- .floated {
-	 display: inline-block;
-	 position: relative;
-	 margin: false;
-	 top: 100px;
-	 left: 100px;
-	 right: 100px;
-	 bottom: 100px;
-	 float: left;
-}
- .abs-center {
-	 display: false;
-	 position: absolute;
-	 margin: false;
-	 top: 50%;
-	 left: 50%;
-	 right: false;
-	 bottom: false;
-	 transform: translate(-50%, -50%);
-	 text-align: center;
-	 width: 88%;
-}
- body {
-	 font-family: 'Open Sans';
-	 font-size: 18px;
-	 letter-spacing: 0px;
-	 font-weight: 400;
-	 line-height: 28px;
-	 background: url("http://kingofwallpapers.com/leaves/leaves-016.jpg") right no-repeat;
-	 background-size: cover;
-}
- body:before {
-	 content: "";
-	 display: false;
-	 position: fixed;
-	 margin: 0;
-	 top: 0;
-	 left: 0;
-	 right: 0;
-	 bottom: 0;
-	 background-color: rgba(255,255,255,0.92);
-}
- .caps {
-	 text-transform: uppercase;
-}
- .justified {
-	 text-align: justify;
-}
- p.light {
-	 color: #777;
-}
- h2 {
-	 font-family: 'Open Sans';
-	 font-size: 30px;
-	 letter-spacing: 5px;
-	 font-weight: 600;
-	 line-height: 40px;
-	 color: #000;
-}
- h3 {
-	 font-family: 'Open Sans';
-	 font-size: 21px;
-	 letter-spacing: 1px;
-	 font-weight: 600;
-	 line-height: 28px;
-	 color: #000;
-}
- .page {
-	 width: 90%;
-	 height: 1000px;
-	 max-width: 1200px;
-	 margin: 80px auto;
-	 background-color: #fff;
-	 box-shadow: 6px 10px 28px 0px rgba(0,0,0,0.4);
-}
- .top-bar {
+
+	* {
+		box-sizing: border-box;
+		transition: 0.35s ease;
+ }
+	.rela-block {
+		display: block;
+		position: relative;
+		margin: auto;
+		/* top: 0px;
+		left: 10px;
+		right: 400px;
+		bottom: 400px; */
+		/* width: 2000px; */
+ }
+	.rela-inline {
+		display: inline-block;
+		position: relative;
+		margin: auto;
+		top: 500px;
+		left: 100px;
+		right: 100px;
+		bottom: 100px;
+ }
+	.floated {
+		display: inline-block;
+		position: relative;
+		margin: false;
+		top: 100px;
+		left: 100px;
+		right: 100px;
+		bottom: 100px;
+		float: left;
+ }
+	.abs-center {
+		display: false;
+		position: absolute;
+		margin: false;
+		top: 50%;
+		left: 50%;
+		right: false;
+		bottom: false;
+		transform: translate(-50%, -50%);
+		text-align: center;
+		width: 88%;
+ }
+	body {
+		font-family: 'Open Sans';
+		font-size: 18px;
+		letter-spacing: 0px;
+		font-weight: 400;
+		line-height: 28px;
+		background: url("http://kingofwallpapers.com/leaves/leaves-016.jpg") right no-repeat;
+		background-size: cover;
+ }
+	body:before {
+		content: "";
+		display: false;
+		position: fixed;
+		margin: 0;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background-color: rgba(255,255,255,0.92);
+ }
+	.caps {
+		text-transform: uppercase;
+ }
+	.justified {
+		text-align: justify;
+ }
+	p.light {
+		color: #777;
+ }
+	h2 {
+		font-family: 'Open Sans';
+		font-size: 30px;
+		letter-spacing: 5px;
+		font-weight: 600;
+		line-height: 40px;
+		color: #000;
+ }
+	h3 {
+		font-family: 'Open Sans';
+		font-size: 21px;
+		letter-spacing: 1px;
+		font-weight: 600;
+		line-height: 28px;
+		color: #000;
+ }
+	.page {
+		width: 90%;
+		height: 1000px;
+		max-width: 1200px;
+		margin: 80px auto;
+		background-color: #fff;
+		box-shadow: 6px 10px 28px 0px rgba(0,0,0,0.4);
+ }
+	.top-bar {
+		height: 220px;
+		background-color: #848484;
+		color: #fff;
+ }
+ .logo img{
+	 width: 220px;
 	 height: 220px;
-	 background-color: #848484;
-	 color: #fff;
-}
-.logo img{
-  width: 220px;
-  height: 220px;
-  border-radius: 50%;
-}
- .name {
-	 display: false;
-	 position: absolute;
-	 margin: false;
-	 top: false;
-	 left: calc(350px + 5%);
-	 right: 0;
-	 bottom: 0;
-	 height: 120px;
-	 text-align: center;
-	 font-family: 'Raleway';
-	 font-size: 58px;
-	 letter-spacing: 8px;
-	 font-weight: 100;
-	 line-height: 60px;
-}
- .name div {
-	 width: 94%;
-}
- .side-bar {
-	 display: false;
-	 position: absolute;
-	 margin: false;
-	 top: 60px;
-	 left: 5%;
-	 right: false;
-	 bottom: 0;
-	 width: 350px;
-	 background-color: #f7e0c1;
-	 padding: 320px 30px 50px;
-}
- .mugshot {
-	 display: false;
-	 position: absolute;
-	 margin: false;
-	 top: 50px;
-	 left: 70px;
-	 right: false;
-	 bottom: false;
-	 height: 210px;
-	 width: 210px;
-}
- .mugshot .logo {
-	 margin: -23px;
-}
- .logo {
-	 display: false;
-	 position: absolute;
-	 margin: false;
-	 top: 0;
-	 left: 10%;
-	 right: false;
-	 bottom: false;
-	 z-index: 100;
-	 margin: 0;
-	 color: #000;
-	 height: 250px;
-	 width: 250px;
-}
- .logo .logo-svg {
-	 height: 100%;
-	 width: 100%;
-	 stroke: #000;
-	 cursor: pointer;
-}
- .logo .logo-text {
-	 display: false;
-	 position: absolute;
-	 margin: false;
-	 top: 90%;
-	 left: -80px;
-	 right: 16%;
-	 bottom: 100px;
-	 cursor: pointer;
-	 font-family: "Montserrat";
-	 font-size: 45px;
-	 letter-spacing: 0px;
-	 font-weight: 400;
-   width: 370px;
-	 line-height: 58.333333333333336px;
-}
- .social {
-	 padding-left: 60px;
-	 margin-bottom: 20px;
-	 cursor: pointer;
-}
- .social:before {
-	 content: "";
-	 display: false;
-	 position: absolute;
-	 margin: false;
-	 top: -4px;
-	 left: 10px;
-	 right: false;
-	 bottom: false;
-	 height: 35px;
-	 width: 35px;
-	 background-size: cover !important;
-}
- .social.twitter:before {
-	 background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_Twitter-07-128.png") center no-repeat;
-}
- .social.pinterest:before {
-	 background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_Pinterest-23-128.png") center no-repeat;
-}
- .social.linked-in:before {
-	 background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_LinkedIn-128.png") center no-repeat;
-}
- .side-header {
-	 font-family: 'Open Sans';
-	 font-size: 18px;
-	 letter-spacing: 4px;
-	 font-weight: 600;
-	 line-height: 28px;
-	 margin: 60px auto 10px;
-	 padding-bottom: 5px;
-	 border-bottom: 1px solid #888;
-}
- .list-thing {
-	 padding-left: 25px;
-	 margin-bottom: 10px;
-}
- .content-container {
-	 margin-right: 0;
-	 width: calc(95% - 350px);
-	 padding: 25px 40px 50px;
-}
- .content-container > * {
-	 margin: 0 auto 25px;
-}
- .content-container > h3 {
-	 margin: 0 auto 5px;
-}
- .content-container > p.long-margin {
-	 margin: 0 auto 50px;
-}
- .title {
-	 width: 80%;
-	 text-align: center;
-}
- .separator {
-	 width: 240px;
-	 height: 2px;
-	 background-color: #999;
-}
- .greyed {
-	 background-color: #ddd;
-	 width: 100%;
-	 max-width: 580px;
-	 text-align: center;
-	 font-family: 'Open Sans';
-	 font-size: 18px;
-	 letter-spacing: 6px;
-	 font-weight: 600;
-	 line-height: 28px;
-}
- @media screen and (max-width: 1150px) {
-	 .name {
-		 color: #fff;
-		 font-family: 'Raleway';
-		 font-size: 38px;
-		 letter-spacing: 6px;
-		 font-weight: 100;
-		 line-height: 48px;
+	 border-radius: 50%;
+ }
+	.name {
+		display: false;
+		position: absolute;
+		margin: false;
+		top: false;
+		left: calc(350px + 5%);
+		right: 0;
+		bottom: 0;
+		height: 120px;
+		text-align: center;
+		font-family: 'Raleway';
+		font-size: 58px;
+		letter-spacing: 8px;
+		font-weight: 100;
+		line-height: 60px;
+ }
+	.name div {
+		width: 94%;
+ }
+	.side-bar {
+		display: false;
+		position: absolute;
+		margin: false;
+		top: 60px;
+		left: 5%;
+		right: false;
+		bottom: 0;
+		width: 350px;
+		background-color: #f7e0c1;
+		padding: 320px 30px 50px;
+ }
+	.mugshot {
+		display: false;
+		position: absolute;
+		margin: false;
+		top: 50px;
+		left: 70px;
+		right: false;
+		bottom: false;
+		height: 210px;
+		width: 210px;
+ }
+	.mugshot .logo {
+		margin: -23px;
+ }
+	.logo {
+		display: false;
+		position: absolute;
+		margin: false;
+		top: 0;
+		left: 10%;
+		right: false;
+		bottom: false;
+		z-index: 100;
+		margin: 0;
+		color: #000;
+		height: 250px;
+		width: 250px;
+ }
+	.logo .logo-svg {
+		height: 100%;
+		width: 100%;
+		stroke: #000;
+		cursor: pointer;
+ }
+	.logo .logo-text {
+		display: false;
+		position: absolute;
+		margin: false;
+		top: 90%;
+		left: -80px;
+		right: 16%;
+		bottom: 100px;
+		cursor: pointer;
+		font-family: "Montserrat";
+		font-size: 45px;
+		letter-spacing: 0px;
+		font-weight: 400;
+		width: 370px;
+		line-height: 58.333333333333336px;
+ }
+	.social {
+		padding-left: 60px;
+		margin-bottom: 20px;
+		cursor: pointer;
+ }
+	.social:before {
+		content: "";
+		display: false;
+		position: absolute;
+		margin: false;
+		top: -4px;
+		left: 10px;
+		right: false;
+		bottom: false;
+		height: 35px;
+		width: 35px;
+		background-size: cover !important;
+ }
+	.social.twitter:before {
+		background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_Twitter-07-128.png") center no-repeat;
+ }
+	.social.pinterest:before {
+		background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_Pinterest-23-128.png") center no-repeat;
+ }
+	.social.linked-in:before {
+		background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_LinkedIn-128.png") center no-repeat;
+ }
+	.side-header {
+		font-family: 'Open Sans';
+		font-size: 18px;
+		letter-spacing: 4px;
+		font-weight: 600;
+		line-height: 28px;
+		margin: 60px auto 10px;
+		padding-bottom: 5px;
+		border-bottom: 1px solid #888;
+ }
+	.list-thing {
+		padding-left: 25px;
+		margin-bottom: 10px;
+ }
+	.content-container {
+		margin-right: 0;
+		width: calc(95% - 350px);
+		padding: 25px 40px 50px;
+ }
+	.content-container > * {
+		margin: 0 auto 25px;
+ }
+	.content-container > h3 {
+		margin: 0 auto 5px;
+ }
+	.content-container > p.long-margin {
+		margin: 0 auto 50px;
+ }
+	.title {
+		width: 80%;
+		text-align: center;
+ }
+	.separator {
+		width: 240px;
+		height: 2px;
+		background-color: #999;
+ }
+	.greyed {
+		background-color: #ddd;
+		width: 100%;
+		max-width: 580px;
+		text-align: center;
+		font-family: 'Open Sans';
+		font-size: 18px;
+		letter-spacing: 6px;
+		font-weight: 600;
+		line-height: 28px;
+ }
+	@media screen and (max-width: 1150px) {
+		.name {
+			color: #fff;
+			font-family: 'Raleway';
+			font-size: 38px;
+			letter-spacing: 6px;
+			font-weight: 100;
+			line-height: 48px;
+	 }
+ }
+	
+
+
+/* .t2{
+	* {
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
 	}
-}
- 
+	html {
+		height: 100%;  
+	}
+	
+	body {
+		min-height: 100%;  
+		background: #eee;
+		font-family: 'Lato', sans-serif;
+		font-weight: 400;
+		color: #222;
+		font-size: 14px;
+		line-height: 26px;
+		padding-bottom: 50px;
+	}
+	
+	.container {
+		max-width: 700px;   
+		background: #fff;
+		margin: 0px auto 0px; 
+		box-shadow: 1px 1px 2px #DAD7D7;
+		border-radius: 3px;  
+		padding: 40px;
+		margin-top: 50px;
+	}
+	
+	.header {
+		margin-bottom: 30px;
+		
+		.full-name {
+			font-size: 40px;
+			text-transform: uppercase;
+			margin-bottom: 5px;
+		}
+		
+		.first-name {
+			font-weight: 700;
+		}
+		
+		.last-name {
+			font-weight: 300;
+		}
+		
+		.contact-info {
+			margin-bottom: 20px;
+		}
+		
+		.email ,
+		.phone {
+			color: #999;
+			font-weight: 300;
+		} 
+		
+		.separator {
+			height: 10px;
+			display: inline-block;
+			border-left: 2px solid #999;
+			margin: 0px 10px;
+		}
+		
+		.position {
+			font-weight: bold;
+			display: inline-block;
+			margin-right: 10px;
+			text-decoration: underline;
+		}
+	}
+	
+	
+	.details {
+		line-height: 20px;
+		
+		.section {
+			margin-bottom: 40px;  
+		}
+		
+		.section:last-of-type {
+			margin-bottom: 0px;  
+		}
+		
+		.section__title {
+			letter-spacing: 2px;
+			color: #54AFE4;
+			font-weight: bold;
+			margin-bottom: 10px;
+			text-transform: uppercase;
+		}
+		
+		.section__list-item {
+			margin-bottom: 40px;
+		}
+		
+		.section__list-item:last-of-type {
+			margin-bottom: 0;
+		}
+		
+		.left ,
+		.right {
+			vertical-align: top;
+			display: inline-block;
+		}
+		
+		.left {
+			width: 60%;    
+		}
+		
+		.right {
+			tex-align: right;
+			width: 39%;    
+		}
+		
+		.name {
+			font-weight: bold;
+		}
+		
+		a {
+			text-decoration: none;
+			color: #000;
+			font-style: italic;
+		}
+		
+		a:hover {
+			text-decoration: underline;
+			color: #000;
+		}
+		
+		.skills {
+			
+		}
+			
+		.skills__item {
+			margin-bottom: 10px;  
+		}
+		
+		.skills__item .right {
+			input {
+				display: none;
+			}
+			
+			label {
+				display: inline-block;  
+				width: 20px;
+				height: 20px;
+				background: #C3DEF3;
+				border-radius: 20px;
+				margin-right: 3px;
+			}
+			
+			input:checked + label {
+				background: #79A9CE;
+			}
+		}
+	}
+	
+	
+	
+	
+	
+	
+	
+	
+	
+} */
