--- a/src/app/resume/selected-template/selected-template.component.css
+++ b/src/app/resume/selected-template/selected-template.component.css
@@ -1,281 +1,671 @@
-
-	* {
-		box-sizing: border-box;
-		transition: 0.35s ease;
- }
-	.rela-block {
-		display: block;
-		position: relative;
-		margin: auto;
-		/* top: 0px;
+#first {
+  * {
+    box-sizing: border-box;
+    transition: 0.35s ease;
+  }
+  .rela-block {
+    display: block;
+    position: relative;
+    margin: auto;
+    /* top: 0px;
 		left: 10px;
 		right: 400px;
 		bottom: 400px; */
-		/* width: 2000px; */
- }
-	.rela-inline {
-		display: inline-block;
-		position: relative;
-		margin: auto;
-		top: 500px;
-		left: 100px;
-		right: 100px;
-		bottom: 100px;
- }
-	.floated {
-		display: inline-block;
-		position: relative;
-		margin: false;
-		top: 100px;
-		left: 100px;
-		right: 100px;
-		bottom: 100px;
-		float: left;
- }
-	.abs-center {
-		display: false;
-		position: absolute;
-		margin: false;
-		top: 50%;
-		left: 50%;
-		right: false;
-		bottom: false;
-		transform: translate(-50%, -50%);
-		text-align: center;
-		width: 88%;
- }
-	body {
-		font-family: 'Open Sans';
-		font-size: 18px;
-		letter-spacing: 0px;
-		font-weight: 400;
-		line-height: 28px;
-		background: url("http://kingofwallpapers.com/leaves/leaves-016.jpg") right no-repeat;
-		background-size: cover;
- }
-	body:before {
-		content: "";
-		display: false;
-		position: fixed;
-		margin: 0;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		background-color: rgba(255,255,255,0.92);
- }
-	.caps {
-		text-transform: uppercase;
- }
-	.justified {
-		text-align: justify;
- }
-	p.light {
-		color: #777;
- }
-	h2 {
-		font-family: 'Open Sans';
-		font-size: 30px;
-		letter-spacing: 5px;
-		font-weight: 600;
-		line-height: 40px;
-		color: #000;
- }
-	h3 {
-		font-family: 'Open Sans';
-		font-size: 21px;
-		letter-spacing: 1px;
-		font-weight: 600;
-		line-height: 28px;
-		color: #000;
- }
-	.page {
-		width: 90%;
-		height: 1000px;
-		max-width: 1200px;
-		margin: 80px auto;
-		background-color: #fff;
-		box-shadow: 6px 10px 28px 0px rgba(0,0,0,0.4);
- }
-	.top-bar {
-		height: 220px;
-		background-color: #848484;
-		color: #fff;
- }
- .logo img{
+    /* width: 2000px; */
+  }
+  .rela-inline {
+    display: inline-block;
+    position: relative;
+    margin: auto;
+    top: 500px;
+    left: 100px;
+    right: 100px;
+    bottom: 100px;
+  }
+  .floated {
+    display: inline-block;
+    position: relative;
+    margin: false;
+    top: 100px;
+    left: 100px;
+    right: 100px;
+    bottom: 100px;
+    float: left;
+  }
+  .abs-center {
+    display: false;
+    position: absolute;
+    margin: false;
+    top: 50%;
+    left: 50%;
+    right: false;
+    bottom: false;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 88%;
+  }
+  body {
+    font-family: "Open Sans";
+    font-size: 18px;
+    letter-spacing: 0px;
+    font-weight: 400;
+    line-height: 28px;
+    background: url("http://kingofwallpapers.com/leaves/leaves-016.jpg") right
+      no-repeat;
+    background-size: cover;
+  }
+  body:before {
+    content: "";
+    display: false;
+    position: fixed;
+    margin: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.92);
+  }
+  .caps {
+    text-transform: uppercase;
+  }
+  .justified {
+    text-align: justify;
+  }
+  p.light {
+    color: #777;
+  }
+  h2 {
+    font-family: "Open Sans";
+    font-size: 30px;
+    letter-spacing: 5px;
+    font-weight: 600;
+    line-height: 40px;
+    color: #000;
+  }
+  h3 {
+    font-family: "Open Sans";
+    font-size: 21px;
+    letter-spacing: 1px;
+    font-weight: 600;
+    line-height: 28px;
+    color: #000;
+  }
+  .page {
+    width: 90%;
+    height: 1000px;
+    max-width: 1200px;
+    margin: 80px auto;
+    background-color: #fff;
+    box-shadow: 6px 10px 28px 0px rgba(0, 0, 0, 0.4);
+  }
+  .top-bar {
+    height: 220px;
+    background-color: #848484;
+    color: #fff;
+  }
+  .logo img {
+    width: 220px;
+    height: 220px;
+    border-radius: 50%;
+  }
+  .name {
+    display: false;
+    position: absolute;
+    margin: false;
+    top: false;
+    left: calc(350px + 5%);
+    right: 0;
+    bottom: 0;
+    height: 120px;
+    text-align: center;
+    font-family: "Raleway";
+    font-size: 58px;
+    letter-spacing: 8px;
+    font-weight: 100;
+    line-height: 60px;
+  }
+  .name div {
+    width: 94%;
+  }
+  .side-bar {
+    display: false;
+    position: absolute;
+    margin: false;
+    top: 60px;
+    left: 5%;
+    right: false;
+    bottom: 0;
+    width: 350px;
+    background-color: #f7e0c1;
+    padding: 320px 30px 50px;
+  }
+  .mugshot {
+    display: false;
+    position: absolute;
+    margin: false;
+    top: 50px;
+    left: 70px;
+    right: false;
+    bottom: false;
+    height: 210px;
+    width: 210px;
+  }
+  .mugshot .logo {
+    margin: -23px;
+  }
+  .logo {
+    display: false;
+    position: absolute;
+    margin: false;
+    top: 0;
+    left: 10%;
+    right: false;
+    bottom: false;
+    z-index: 100;
+    margin: 0;
+    color: #000;
+    height: 250px;
+    width: 250px;
+  }
+  .logo .logo-svg {
+    height: 100%;
+    width: 100%;
+    stroke: #000;
+    cursor: pointer;
+  }
+  .logo .logo-text {
+    display: false;
+    position: absolute;
+    margin: false;
+    top: 90%;
+    left: -80px;
+    right: 16%;
+    bottom: 100px;
+    cursor: pointer;
+    font-family: "Montserrat";
+    font-size: 45px;
+    letter-spacing: 0px;
+    font-weight: 400;
+    width: 370px;
+    line-height: 58.333333333333336px;
+  }
+  .social {
+    padding-left: 60px;
+    margin-bottom: 20px;
+    cursor: pointer;
+  }
+  .social:before {
+    content: "";
+    display: false;
+    position: absolute;
+    margin: false;
+    top: -4px;
+    left: 10px;
+    right: false;
+    bottom: false;
+    height: 35px;
+    width: 35px;
+    background-size: cover !important;
+  }
+  .social.twitter:before {
+    background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_Twitter-07-128.png")
+      center no-repeat;
+  }
+  .social.pinterest:before {
+    background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_Pinterest-23-128.png")
+      center no-repeat;
+  }
+  .social.linked-in:before {
+    background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_LinkedIn-128.png")
+      center no-repeat;
+  }
+  .side-header {
+    font-family: "Open Sans";
+    font-size: 18px;
+    letter-spacing: 4px;
+    font-weight: 600;
+    line-height: 28px;
+    margin: 60px auto 10px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #888;
+  }
+  .list-thing {
+    padding-left: 25px;
+    margin-bottom: 10px;
+  }
+  .content-container {
+    margin-right: 0;
+    width: calc(95% - 350px);
+    padding: 25px 40px 50px;
+  }
+  .content-container > * {
+    margin: 0 auto 25px;
+  }
+  .content-container > h3 {
+    margin: 0 auto 5px;
+  }
+  .content-container > p.long-margin {
+    margin: 0 auto 50px;
+  }
+  .title {
+    width: 80%;
+    text-align: center;
+  }
+  .separator {
+    width: 240px;
+    height: 2px;
+    background-color: #999;
+  }
+  .greyed {
+    background-color: #ddd;
+    width: 100%;
+    max-width: 580px;
+    text-align: center;
+    font-family: "Open Sans";
+    font-size: 18px;
+    letter-spacing: 6px;
+    font-weight: 600;
+    line-height: 28px;
+  }
+  @media screen and (max-width: 1150px) {
+    .name {
+      color: #fff;
+      font-family: "Raleway";
+      font-size: 38px;
+      letter-spacing: 6px;
+      font-weight: 100;
+      line-height: 48px;
+    }
+  }
+}
+#second{
+	width: 95%;
+	margin: auto;
+	@import url(https://fonts.googleapis.com/css?family=Varela+Round);
+ @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
+ *, *::after, *::before {
+	 box-sizing: border-box;
+}
+ html, body {
+	 height: 100%;
+}
+ body {
+	 font-family: 'Open Sans', sans-serif;
+	 font-size: 16px;
+	 line-height: 1.5em;
+}
+ a {
+	 color: #6c9;
+	 text-decoration: none;
+}
+ .clearfix::after, .clearfix::before {
+	 content: " ";
+	 display: table;
+}
+ .clearfix::after {
+	 clear: both;
+}
+ .bold {
+	 color: #4a4e51;
+	 font-weight: 400;
+}
+ .resume-wrapper {
+	 position: relative;
+	 text-align: center;
+	 height: 100%;
+}
+ .container {
+	 min-height: 600px;
+}
+ .profile {
+	 background: #fff;
+	 width: 40%;
+	 float: left;
+	 color: #9099a0;
+}
+ @media (max-width: 850px) {
+	 .profile {
+		 width: 100%;
+	}
+}
+ .profile .name-wrapper {
+	 float: left;
+	 width: 60%;
+}
+ .profile h1 {
+	 font-size: 2.5em;
+	 text-align: left;
+	 font-family: 'Varela Round', sans-serif;
+	 color: #4a4e51;
+	 text-transform: uppercase;
+	 line-height: 1em;
+	 padding-top: 40px;
+}
+ @media (max-width: 1200px) {
+	 .profile h1 {
+		 padding-top: 20px;
+	}
+}
+ @media (max-width: 450px) {
+	 .profile h1 {
+		 font-size: 1.8em;
+		 padding-top: 20px;
+	}
+}
+ .profile li {
+	 margin-bottom: 10px;
+}
+ .profile .picture-resume-wrapper {
+	 width: 40%;
+	 display: block;
+	 float: left;
+}
+ @media (max-width: 1200px) {
+	 .profile .picture-resume-wrapper {
+		 width: 100%;
+	}
+}
+ .profile .picture-resume {
 	 width: 220px;
 	 height: 220px;
+	 background-size: cover;
 	 border-radius: 50%;
- }
-	.name {
-		display: false;
-		position: absolute;
-		margin: false;
-		top: false;
-		left: calc(350px + 5%);
-		right: 0;
-		bottom: 0;
-		height: 120px;
-		text-align: center;
-		font-family: 'Raleway';
-		font-size: 58px;
-		letter-spacing: 8px;
-		font-weight: 100;
-		line-height: 60px;
- }
-	.name div {
-		width: 94%;
- }
-	.side-bar {
-		display: false;
-		position: absolute;
-		margin: false;
-		top: 60px;
-		left: 5%;
-		right: false;
-		bottom: 0;
-		width: 350px;
-		background-color: #f7e0c1;
-		padding: 320px 30px 50px;
- }
-	.mugshot {
-		display: false;
-		position: absolute;
-		margin: false;
-		top: 50px;
-		left: 70px;
-		right: false;
-		bottom: false;
-		height: 210px;
-		width: 210px;
- }
-	.mugshot .logo {
-		margin: -23px;
- }
-	.logo {
-		display: false;
-		position: absolute;
-		margin: false;
-		top: 0;
-		left: 10%;
-		right: false;
-		bottom: false;
-		z-index: 100;
-		margin: 0;
-		color: #000;
-		height: 250px;
-		width: 250px;
- }
-	.logo .logo-svg {
-		height: 100%;
-		width: 100%;
-		stroke: #000;
-		cursor: pointer;
- }
-	.logo .logo-text {
-		display: false;
-		position: absolute;
-		margin: false;
-		top: 90%;
-		left: -80px;
-		right: 16%;
-		bottom: 100px;
-		cursor: pointer;
-		font-family: "Montserrat";
-		font-size: 45px;
-		letter-spacing: 0px;
-		font-weight: 400;
-		width: 370px;
-		line-height: 58.333333333333336px;
- }
-	.social {
-		padding-left: 60px;
-		margin-bottom: 20px;
-		cursor: pointer;
- }
-	.social:before {
-		content: "";
-		display: false;
-		position: absolute;
-		margin: false;
-		top: -4px;
-		left: 10px;
-		right: false;
-		bottom: false;
-		height: 35px;
-		width: 35px;
-		background-size: cover !important;
- }
-	.social.twitter:before {
-		background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_Twitter-07-128.png") center no-repeat;
- }
-	.social.pinterest:before {
-		background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_Pinterest-23-128.png") center no-repeat;
- }
-	.social.linked-in:before {
-		background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_LinkedIn-128.png") center no-repeat;
- }
-	.side-header {
-		font-family: 'Open Sans';
-		font-size: 18px;
-		letter-spacing: 4px;
-		font-weight: 600;
-		line-height: 28px;
-		margin: 60px auto 10px;
-		padding-bottom: 5px;
-		border-bottom: 1px solid #888;
- }
-	.list-thing {
-		padding-left: 25px;
-		margin-bottom: 10px;
- }
-	.content-container {
-		margin-right: 0;
-		width: calc(95% - 350px);
-		padding: 25px 40px 50px;
- }
-	.content-container > * {
-		margin: 0 auto 25px;
- }
-	.content-container > h3 {
-		margin: 0 auto 5px;
- }
-	.content-container > p.long-margin {
-		margin: 0 auto 50px;
- }
-	.title {
-		width: 80%;
-		text-align: center;
- }
-	.separator {
-		width: 240px;
-		height: 2px;
-		background-color: #999;
- }
-	.greyed {
-		background-color: #ddd;
-		width: 100%;
-		max-width: 580px;
-		text-align: center;
-		font-family: 'Open Sans';
-		font-size: 18px;
-		letter-spacing: 6px;
-		font-weight: 600;
-		line-height: 28px;
- }
-	@media screen and (max-width: 1150px) {
-		.name {
-			color: #fff;
-			font-family: 'Raleway';
-			font-size: 38px;
-			letter-spacing: 6px;
-			font-weight: 100;
-			line-height: 48px;
-	 }
- }
-	
-
-
+	 margin-right: 0px;
+	 display: table;
+	 position: relative;
+	 vertical-align: middle;
+}
+ .profile .picture-resume span {
+	 display: table-cell;
+	 vertical-align: middle;
+	 position: relative;
+	 margin: 0 auto;
+	 z-index: 10;
+	 text-align: center;
+}
+ .profile .picture-resume img {
+	 border-radius: 50%;
+	 width: 130px;
+}
+ @media (max-width: 1500px) {
+	 .profile .picture-resume img {
+		 width: 80px;
+	}
+}
+ @media (max-width: 1200px) {
+	 .profile .picture-resume img {
+		 width: 120px;
+		 height: 120px;
+	}
+}
+ @media (max-width: 1500px) {
+	 .profile .picture-resume {
+		 width: 150px;
+		 height: 150px;
+	}
+}
+ @media (max-width: 1200px) {
+	 .profile .picture-resume {
+		 width: 200px;
+		 height: 200px;
+	}
+}
+ @media (max-width: 450px) {
+	 .profile .picture-resume {
+		 width: 180px;
+		 height: 180px;
+	}
+}
+ .profile .contact-info {
+	 margin-top: 100px;
+	 font-weight: 300;
+}
+ @media (max-width: 1200px) {
+	 .profile .contact-info {
+		 margin-top: 70px;
+	}
+}
+ @media (max-width: 450px) {
+	 .profile .contact-info {
+		 margin-top: 50px;
+	}
+}
+ .profile .list-titles {
+	 float: left;
+	 text-align: left;
+	 font-weight: 600;
+	 width: 40%;
+	 color: #4a4e51;
+}
+ .profile .list-content {
+	 float: left;
+	 width: 60%;
+	 text-align: left;
+	 font-weight: 300;
+}
+ .profile .contact-presentation {
+	 text-align: left;
+	 font-weight: 300;
+	 margin-top: 100px;
+	 margin-bottom: 100px;
+}
+ @media (max-width: 1200px) {
+	 .profile .contact-presentation {
+		 margin-top: 70px;
+		 margin-bottom: 70px;
+	}
+}
+ @media (max-width: 850px) {
+	 .profile .contact-presentation {
+		 margin-top: 50px;
+		 margin-bottom: 50px;
+	}
+}
+ .profile svg {
+	 width: 100%;
+	 position: absolute;
+	 top: 0;
+	 left: 0;
+}
+ .profile .st0, .profile .st1 {
+	 fill: #6c9;
+}
+ .experience {
+	 background: #3d3e42;
+	 width: 60%;
+	 float: left;
+	 position: relative;
+	 color: #9099a0;
+	 font-weight: 300;
+	 min-height: 100%;
+	 min-height: 100vh;
+}
+ @media (max-width: 850px) {
+	 .experience {
+		 width: 100%;
+	}
+}
+ .experience h3.experience-title {
+	 color: #6c9;
+	 text-align: left;
+	 text-transform: uppercase;
+	 font-size: 1.2em;
+	 margin-bottom: 20px;
+	 font-weight: 400;
+}
+ .experience .company-wrapper {
+	 width: 30%;
+	 float: left;
+	 text-align: left;
+	 padding-right: 5%;
+	 margin-bottom: 60px;
+}
+ @media (max-width: 450px) {
+	 .experience .company-wrapper {
+		 width: 100%;
+		 margin-bottom: 20px;
+	}
+}
+ .experience .job-wrapper {
+	 width: 70%;
+	 float: left;
+	 text-align: left;
+	 padding-right: 5%;
+	 margin-bottom: 60px;
+}
+ @media (max-width: 450px) {
+	 .experience .job-wrapper {
+		 width: 100%;
+		 margin-bottom: 40px;
+	}
+}
+ .experience .experience-title {
+	 color: white;
+	 margin-bottom: 15px;
+}
+ .section-padding {
+	 padding: 60px 60px 40px 40px;
+}
+ @media (max-width: 850px) {
+	 .section-padding {
+		 padding: 80px 15% 40px 10%;
+	}
+}
+ @media (max-width: 450px) {
+	 .section-padding {
+		 padding: 40px 10% 20px 5%;
+	}
+}
+ .section-wrapper {
+	 width: 50%;
+	 float: left;
+	 text-align: left;
+	 color: #9099a0;
+	 font-weight: 300;
+	 margin-bottom: 20px;
+}
+ @media (max-width: 450px) {
+	 .section-wrapper {
+		 width: 100%;
+	}
+}
+ .section-wrapper:nth-child(3) {
+	 padding-right: 8%;
+}
+ .section-wrapper h3.section-title {
+	 color: #6c9;
+	 text-align: left;
+	 text-transform: uppercase;
+	 font-size: 1.2em;
+	 margin-bottom: 20px;
+	 font-weight: 400;
+}
+ .section-wrapper .skill-percentage {
+	 margin-bottom: 10px;
+	 position: relative;
+}
+ .section-wrapper .skill-percentage::after {
+	 content: "";
+	 width: 100%;
+	 height: 6px;
+	 background: #4a4e51;
+	 display: block;
+	 margin-top: 3px;
+}
+ .section-wrapper .skill-percentage::before {
+	 content: "";
+	 height: 6px;
+	 background: #6c9;
+	 position: absolute;
+	 margin-top: 3px;
+	 bottom: 0;
+}
+ .section-wrapper .skill-percentage:nth-child(1)::before {
+	 width: 80%;
+	 animation: skill_1 0.6s ease;
+}
+ .section-wrapper .skill-percentage:nth-child(2)::before {
+	 width: 90%;
+	 animation: skill_2 0.6s ease;
+}
+ .section-wrapper .skill-percentage:nth-child(3)::before {
+	 width: 50%;
+	 animation: skill_3 0.6s ease;
+}
+ .section-wrapper .skill-percentage:nth-child(4)::before {
+	 width: 60%;
+	 animation: skill_4 0.6s ease;
+}
+ .section-wrapper .skill-percentage:nth-child(5)::before {
+	 width: 70%;
+	 animation: skill_5 0.6s ease;
+}
+ .section-wrapper .skill-percentage:nth-child(6)::before {
+	 width: 70%;
+	 animation: skill_6 0.6s ease;
+}
+ .section-wrapper .skill-percentage:nth-child(7)::before {
+	 width: 70%;
+	 animation: skill_6 0.6s ease;
+}
+ @keyframes skill_1 {
+	 from {
+		 width: 0%;
+	}
+	 to {
+		 width: 80%;
+	}
+}
+ @keyframes skill_2 {
+	 from {
+		 width: 0%;
+	}
+	 to {
+		 width: 90%;
+	}
+}
+ @keyframes skill_3 {
+	 from {
+		 width: 0%;
+	}
+	 to {
+		 width: 50%;
+	}
+}
+ @keyframes skill_4 {
+	 from {
+		 width: 0%;
+	}
+	 to {
+		 width: 60%;
+	}
+}
+ @keyframes skill_5 {
+	 from {
+		 width: 0%;
+	}
+	 to {
+		 width: 70%;
+	}
+}
+ @keyframes skill_6 {
+	 from {
+		 width: 0%;
+	}
+	 to {
+		 width: 70%;
+	}
+}
+ @keyframes skill_7 {
+	 from {
+		 width: 0%;
+	}
+	 to {
+		 width: 70%;
+	}
+}
+ 
+}
 /* .t2{
 	* {
 		margin: 0;
